plugins {
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
    id 'java'
    id 'idea'
}

group = 'by.arhor'
version = '0.0.1-SNAPSHOT'

description = 'university-server'

sourceCompatibility = JavaVersion.VERSION_13
targetCompatibility = JavaVersion.VERSION_13

task clientCopy(type: Copy, dependsOn: ':university-client:build') {
    from '../university-client/dist'
    into 'build/resources/main/static/.'
}

bootRun {
    jvmArgs(['--enable-preview'])
    args = ['--spring.profiles.active=dev']
}

idea {
    targetVersion '11'
}

compileJava {
    dependsOn clientCopy
}

repositories {
    mavenCentral()
}

configurations {
    implementation {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
    }
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'

    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'

    implementation project(':university-core')

    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'org.modelmapper:modelmapper:2.3.6'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    testImplementation 'com.h2database:h2'
    testImplementation 'org.hamcrest:hamcrest-all:1.3'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}
